# gen-ai--dnd-mcp

./: .gitignore  AGENTS.md  CHECKBOX_MAPPING_PROGRESS.md  Cargo.toml  README.md  all_fields.txt  debug_fields.rs  debug_output.txt  debug_pdf.rs  debug_test_character_data.txt  erilon_character_sheet_character_data.txt  extract_fields.rs  mcp-config.json  mcp_test_output_character_data.txt  simple_test.json  simple_test.rs  start_mcp_server.sh  test-spell-slots.json  test-wizard.json  test_character_sheet_character_data.txt  test_checkbox_11.json  test_handshake.py  test_mcp.py  test_mcp_interactive.py  test_pdf_fields.py  test_pdf_fill.rs  test_pdf_return.py  test_saves.json  test_strength_save.json  test_wisdom_checkbox.rs  validate_spell_slots.rs  working_character.json
.amazonq/: mcp.json
.amazonq/agents/: default.json
.specify/memory/: constitution.md
docs/: content.md  dnd-assistant-tool-descriptions.md  dnd-assistant.json  dnd-rules.md  mcp-protocol-examples.md  notes.txt  pdf-field-analysis.md  sample-data.md  test-data.json
specs/001-create-a-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-spell-slot/: data-model.md  pdf-field-discovery.md  plan.md  quickstart.md  research.md  spec.md  spell-slot-tables.md  tasks.md
specs/002-my-program-no/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: character_model.rs  dnd_validator.rs  errors.rs  field_mapper.rs  lib.rs  main.rs  mcp_server.rs  narrative_handler.rs  pdf_filler.rs  spell_system.rs
tests/: saving_throws_test.rs
(+56 files in other folders)
